# websites

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  eslint.config.js  package.json  platform.yml  pnpm-lock.yaml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  deploy.yml  destroy.yml  lint.yml  preview-pr.yml  update-site.yml  validate-terraform.yml
apps/ahara.io/: README.md  eslint.config.js  index.html  (+2 more)
apps/ru-ai.net/backend/: Cargo.toml  handler.js  lambda_function.py
apps/ru-ai.net/backend/src/: lib.rs  main.rs
docs/: REVIEW_CHECKLIST.md
eslint-rules/: max-jsx-props.js  no-app-css-base-duplication.js  no-archivist-section-drift.js  no-bulk-shell-drift.js  no-cosmo-editor-drift.js  no-cross-app-alias.js  no-dashboard-section-drift.js  no-direct-fetch.js  no-direct-store-import.js  no-duplicate-component-css.js  no-error-boundary-without-base.js  no-escape-hatches.js  no-hint-css-duplication.js  no-inline-id-generation.js  no-inline-keyboard-nav.js  no-inline-styles.js  no-js-file-extension.js  no-manual-async-state.js  no-manual-expand-state.js  no-manual-view-header.js  no-matrix-css-duplication.js  no-non-vitest-testing.js  no-panel-css-duplication.js  no-raw-error-div.js  no-raw-undefined-union.js  no-remote-shell-drift.js  no-schema-editor-css-drift.js  no-tab-companion-css.js  no-toggle-css-drift.js  no-undefined-css-class.js  no-version-toolbar-drift.js  no-viewer-pattern-drift.js  no-viz-overlay-drift.js  no-viz-utility-drift.js
scripts/: deploy.sh  import-existing.sh
(+257 files in other folders)
