[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1"
aws-sdk-bedrockruntime = "1"
aws-sdk-dynamodb = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
lambda_http = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
